--- a/sites/all/themes/sass/main.sass
+++ b/sites/all/themes/sass/main.sass
@@ -48,10 +48,15 @@ body textarea:required:valid
 			margin: 0
 			font-family: RobotoBold, sans-serif
 			font-size: em(18px)
+			transition: all .2s ease
 			opacity: 0.7
 			margin-bottom: 10px
+			display: inline-block
 			a
 				color: #fff
+			&:hover
+				transform: scale(1.05)
+				text-shadow: 1px 1px 10px #000
 		>div
 			border-bottom: 1px solid #000
 			padding: 5px 30px 20px 30px
@@ -69,7 +74,7 @@ body textarea:required:valid
 					display: inline-block
 					opacity: 0.7
 					text-shadow: 1px 1px 1px #000
-					transition: all .2s ease
+					transition: all .1s ease
 					&:hover
 						transform: scale(1.05)
 						text-shadow: 1px 1px 10px #000
@@ -138,6 +143,13 @@ aside
 	border: 1px solid #fff
 	margin-right: 20px
 	margin-bottom: 20px
+	transition: all .5s ease
+	&:hover
+		transform: scale(1.1)
+		box-shadow: 0 0 20px 2px #000
+	a
+		&:focus
+			outline: none
 
 .field-name-body
 	margin-top: -1em
@@ -204,8 +216,10 @@ aside
 				border: 1px solid #fff
 				font-family: RobotoBold, sans-serif
 				text-shadow: 1px 1px 1px #000
+				transition: all 0.3s ease
 				&:hover
-					box-shadow: 1px 1px 5px 1px #000
+					box-shadow: 0 0 10px 1px #000
+					transform: scale(1.1)
 
 .breadcrumb
 	padding: 0 35px 0 30px
@@ -269,8 +283,10 @@ iframe
 	border: 1px solid #fff
 	font-family: RobotoBold, sans-serif
 	text-shadow: 1px 1px 1px #000
+	transition: all 0.2s ease
 	&:hover
-		box-shadow: 1px 1px 5px 1px #000
+		box-shadow: 0 0 10px 1px #000
+		transform: scale(1.1)
 
 #user-login
 	padding: 0 35px
